# MesoscopicKineticApproximations

./: .gitignore  .travis.yml  2017.11.21 - bp.f90  2017.11.29 - cls_mf user friendly.f90  README.md  cls_mf_09.f90  cls_mf_modular_bisect.f90  install-icc.sh  md,vs  test.txt
Fortran90/: .gitignore  cls_mf.f90  cls_mf.x  constants.f90  data  input  lattice.xyz
Fortran90/analytic_derivatives/: main.f90  makefile  prog.x
Fortran90/analytic_derivatives/log/: constants.f90  data  input  main.f90  prog.x
Fortran90/data_types/: approx_inst.f90  commons.f90  confs.f90  constants.f90  corr.f90  data  data.f90  energy.f90  fmin.f90  funcv.f90  gelim.f90  main.f90  meso_approx.f90  newton.f90  part.f90  plotresults.m
Fortran90/hardcoded/global/bp/: constants.f90  constants.mod  data  hard_bp.f90  makefile  prog.x
Fortran90/hardcoded/global/bpe/: constants.f90  constants.mod  data  main.f90  makefile  prog.x
Fortran90/hardcoded/global/bpec/: DebuggingSolver.xmcd  constants.f90  constants.mod  data  fields  gelim.f90  main.f90  plotdata.m  prog.x
Fortran90/hardcoded/global/k2nnc1/: constants.f90  fmin.f90  fort.16  main.f90  prog.x
Fortran90/hardcoded/local/bp/: bp.x  data  hard_bp.f90  input
Fortran90/hardcoded/local/bpe/: bpe.x  data  hard_bpe.f90  input
Fortran90/hardcoded/local/bpec/: bpec.x  hard_bpec.f90  input
Fortran90/hardcoded/local/k2nnc1/: hard_k2c1.f90  input  input1  input2  new.x
Fortran90/hardcoded/local/k2nnc1/circle/: circle.f90  circle.x
Fortran90/hardcoded/solvers/global_newton/: solver.f90
Fortran90/modular/: confs.f90  constants.f90  corr.f90  fmin.f90  funcv.f90  gelim.f90  k2nnc1_hamiltonian.f90  lu.f90  main.f90  newton.f90  part.f90
FortranCode/: BPEC.f90  BPEC_Fortran.txt  BPEC_Fortran_Theta_vs_Mu.txt  BPEC_Matlab.txt  BPEC_Matlab_Theta_vs_Mu.txt  CMakeLists.txt  FortranCmdOut_K2NNC2.txt  FortranCmdOut_K3NNC2.txt  K2NNC2.f90  K2NNC2_Fortran_Theta_vs_Mu.txt  K2NNC2_Matlab_Theta_vs_Mu.txt  K3NNC2.f90  K3NNC2_Fortran_Theta_vs_Mu.txt  K3NNC2_Matlab_Theta_vs_Mu.txt  MesoApprox.sln  MesoApprox.vfproj  NotesOnMemoryRequired.txt  TestFcnPowell.m  calculation_parser_module.f90  calculation_setup_module.f90  constants_module.f90  dogleg.for  err_warn_module.F90  extfcn_for_solver.f90  fdjac.f90  fminln.f90  func.f90  funcv.f90  global_constants.f90  init_1NN.f90  init_2NN.f90  init_3NN.f90  init_BPEC.f90  init_K2NNC2.f90  init_K3NNC2.f90  lnsrch.f90  lubksb.f90  ludcmp.f90  main_meso_approx.f90  main_powels_method.f90  (+12 more)
FortranCode/cmake/: CheckMPI.cmake  FindOpenMP_Fortran.cmake  compilerinfo2008_Fortran.cmake
FortranCode/profiling/: compare.py  plot.plt  readme  run.sh
FortranCode/profiling/001/: K2NNC2_Fortran_Theta_vs_Mu.txt
FortranCode/profiling/002/: BPEC_Fortran_Theta_vs_Mu.txt  K3NNC2_Fortran_Theta_vs_Mu.txt
FortranCode/profiling/004/: BPEC_Fortran_Theta_vs_Mu.txt  K2NNC2_Fortran_Theta_vs_Mu.txt  K3NNC2_Fortran_Theta_vs_Mu.txt
FortranCode/profiling/ref/: readme
FortranCode/profiling/ref/data/2/: K3NNC2_Fortran_Theta_vs_Mu.txt
FortranCode/profiling/ref/gprof/0/: analyzis.txt  gmon.out
FortranCode/profiling/ref/gprof/1/: analyzis.txt  gmon.out
FortranCode/profiling/ref/gprof/2/: analyzis.txt  gmon.out
FortranCode/profiling/ref/memory/0/: massif.out.5745  massif.out.9691
FortranCode/profiling/ref/memory/1/: massif.out.25505
FortranCode/profiling/ref/memory/2/: massif.out.7953
FortranCode/tests/: CMakeLists.txt  sample_run.py  transform.py
FortranCode/tests/data/0/: BPEC_Fortran_Theta_vs_Mu.txt
FortranCode/tests/data/1/: K2NNC2_Fortran_Theta_vs_Mu.txt
MatlabCode/: .gitignore  AllStates.m  Hamiltonian.m  HamiltonianBP.m  HamiltonianBPE.m  HamiltonianBPEC.m  HamiltonianK2NNC1.m  HamiltonianK2NNC2.m  HamiltonianK2NNC2T1.m  HamiltonianK2NNC3.m  HamiltonianK3NN.m  HamiltonianK3NN1corr.m  HamiltonianK3NN2corr.m  HamiltonianK3NNC1.m  HamiltonianK3NNC2.m  HamiltonianK3NNC3.m  HamiltonianK3NNC3b.m  HamiltonianK3NNC4.m  HamiltonianK3NNC5.m  InitialGuessesContinuation.m  InitialGuessesContinuation2.m  Main_GeneralisedCompar.m  Main_GeneralisedCompar_CHEMREACTOR22_Miguel.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelBP.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelBPT680.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelBPT680_vMFdense.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelBPT680point.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelBPT680prove.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelBP_vMFdense.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK2.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK2T680.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK2T680_vMFdens.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK2T680point.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK2_vMFdens.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK3.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK3T680.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK3T680_vMFdense.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK3T680point.m  Main_GeneralisedCompar_CHEMREACTOR22_MiguelK3_vMFdens.m  Main_GeneralisedCompar_CHEMREACTOR22_StdSttKinetics.m  (+27 more)
MatlabCode/NOOxidationNO2Reduction/: EnergeticsAndKineticsTlnPr.m  EnergeticsAndKineticsTlnPr_OLD.m  Go.m  Go_N2.m  Go_NO.m  Go_NO2.m  Go_O2.m  Ho.m  Ho_N2.m  Ho_NO.m  Ho_NO2.m  Ho_O2.m  So.m  VibrationalPartitionFunction.m  ZeroPointEnergy.m
